resources/sass/_global.scss
// remove focus ring
* {
    &:focus {
        outline: none !important;
    }
}

ul,
ol {
    padding-left: 0;
    list-style: none;
}

input[type=submit] {
    padding: 0;
    border: none;
    background: none;
}

// Larger input/select
input.big,
select.big {
    font-size: 18px;
    font-weight: 500;
    letter-spacing: -0.9px;
    height: 61px;
    line-height: 61px;
    padding: 0 45px 0 16px;
}

// Custom container width
.container-980 {
    max-width: 980px;
}

.bg-teal {
    background-color: $teal;
}

.bg-blue {
    background-color: $blue;
}

.bg-violet {
    background-color: $violet;
}

.bg-hanblue {
    background-color: $hanblue;
}

.bg-green {
    background-color: $green;
}

.bg-pink {
    background-color: $pink;
}

.bg-black {
    background-color: $black;
}

.bg-grey {
    background-color: $grey;
}

.bg-white {
    background-color: $white;
}

.bg-greylight {
    background-color: $greylight;
}

.col-teal {
    color: $teal;
}

.col-blue {
    color: $blue;
}

.col-violet {
    color: $violet;
}

.col-hanblue {
    color: $hanblue;
}

.col-green {
    color: $green;
}

.col-pink {
    color: $pink;
}

.col-black {
    color: $black;
}

.col-grey {
    color: $grey;
}

.col-white {
    color: $white;
}

.col-greylight {
    color: $greylight;
}

// In text links

.text-link {
    cursor: pointer;
    color: inherit;
    text-decoration: underline !important;

    &:hover {
        color: inherit;
    }
}

// Vertical center position absolute
.v-c {
    @include v-c;
}

// Prevent bootstrap adding opacity hover to close buttons
.close {
    opacity: 1 !important;
}

